syntax = "proto3";

message Adresse {
   string Postleitzahl = 3;
   string Ort = 4;
   string Strasse = 5;
   string Hausnummer = 6;
   string Postfach = 7;
   string Adresszusatz = 8;
   string CoErgaenzung = 9;
   Landescode Landescode = 10;
}
enum Anrede {
   HERR = 0;
   FRAU = 1;
   EHELEUTE = 2;
   FIRMA = 3;
   INDIVIDUELL = 4;
   DR = 5;
}
message Ansprechpartner {
   Anrede Anrede = 4;
   string IndividuelleAnrede = 5;
   Titel Titel = 6;
   string Vorname = 7;
   string Nachname = 8;
   string EMailAdresse = 9;
   string Kommentar = 10;
   Geschaeftspartner Geschaeftspartner = 11;
   Adresse Adresse = 12;
   repeated Rufnummer Rufnummer = 13;
   repeated Zustaendigkeit Zustaendigkeit = 14;
}
message Geschaeftspartner {
   Anrede Anrede = 4;
   string Name1 = 6;
   string Name2 = 7;
   string Name3 = 8;
   bool Gewerbekennzeichnung = 9;
   string Hrnummer = 10;
   string Amtsgericht = 11;
   repeated Kontaktart Kontaktweg = 12 [packed = false];
   string UmsatzsteuerId = 13;
   string GlaeubigerId = 14;
   string EMailAdresse = 15;
   string Website = 16;
   repeated Geschaeftspartnerrolle Geschaeftspartnerrolle = 17 [packed = false];
   Adresse Partneradresse = 18;
   string Title = 1001;
}
enum Geschaeftspartnerrolle {
   LIEFERANT = 0;
   DIENSTLEISTER = 1;
   KUNDE = 2;
   INTERESSENT = 3;
   MARKTPARTNER = 4;
}
enum Kontaktart {
   ANSCHREIBEN = 0;
   TELEFONAT = 1;
   FAX = 2;
   E_MAIL = 3;
   SMS = 4;
}
enum Landescode {
   AC = 0;
   AD = 1;
   AE = 2;
   AF = 3;
   AG = 4;
   AI = 5;
   AL = 6;
   AM = 7;
   AN = 8;
   AO = 9;
   AQ = 10;
   AR = 11;
   AS = 12;
   AT = 13;
   AU = 14;
   AW = 15;
   AX = 16;
   AZ = 17;
   BA = 18;
   BB = 19;
   BD = 20;
   BE = 21;
   BF = 22;
   BG = 23;
   BH = 24;
   BI = 25;
   BJ = 26;
   BL = 27;
   BM = 28;
   BN = 29;
   BO = 30;
   BQ = 31;
   BR = 32;
   BS = 33;
   BT = 34;
   BU = 35;
   BV = 36;
   BW = 37;
   BY = 38;
   BZ = 39;
   CA = 40;
   CC = 41;
   CD = 42;
   CF = 43;
   CG = 44;
   CH = 45;
   CI = 46;
   CK = 47;
   CL = 48;
   CM = 49;
   CN = 50;
   CO = 51;
   CP = 52;
   CR = 53;
   CS = 54;
   CU = 55;
   CV = 56;
   CW = 57;
   CX = 58;
   CY = 59;
   CZ = 60;
   DE = 61;
   DG = 62;
   DJ = 63;
   DK = 64;
   DM = 65;
   DO = 66;
   DZ = 67;
   EA = 68;
   EC = 69;
   EE = 70;
   EG = 71;
   EH = 72;
   ER = 73;
   ES = 74;
   ET = 75;
   EU = 76;
   FI = 77;
   FJ = 78;
   FK = 79;
   FM = 80;
   FO = 81;
   FR = 82;
   FX = 83;
   GA = 84;
   GB = 85;
   GD = 86;
   GE = 87;
   GF = 88;
   GG = 89;
   GH = 90;
   GI = 91;
   GL = 92;
   GM = 93;
   GN = 94;
   GP = 95;
   GQ = 96;
   GR = 97;
   GS = 98;
   GT = 99;
   GU = 100;
   GW = 101;
   GY = 102;
   HK = 103;
   HM = 104;
   HN = 105;
   HR = 106;
   HT = 107;
   HU = 108;
   IC = 109;
   ID = 110;
   IE = 111;
   IL = 112;
   IM = 113;
   IN = 114;
   IO = 115;
   IQ = 116;
   IR = 117;
   IS = 118;
   IT = 119;
   JE = 120;
   JM = 121;
   JO = 122;
   JP = 123;
   KE = 124;
   KG = 125;
   KH = 126;
   KI = 127;
   KM = 128;
   KN = 129;
   KP = 130;
   KR = 131;
   KW = 132;
   KY = 133;
   KZ = 134;
   LA = 135;
   LB = 136;
   LC = 137;
   LI = 138;
   LK = 139;
   LR = 140;
   LS = 141;
   LT = 142;
   LU = 143;
   LV = 144;
   LY = 145;
   MA = 146;
   MC = 147;
   MD = 148;
   ME = 149;
   MF = 150;
   MG = 151;
   MH = 152;
   MK = 153;
   ML = 154;
   MM = 155;
   MN = 156;
   MO = 157;
   MP = 158;
   MQ = 159;
   MR = 160;
   MS = 161;
   MT = 162;
   MU = 163;
   MV = 164;
   MW = 165;
   MX = 166;
   MY = 167;
   MZ = 168;
   NA = 169;
   NC = 170;
   NE = 171;
   NF = 172;
   NG = 173;
   NI = 174;
   NL = 175;
   NO = 176;
   NP = 177;
   NR = 178;
   NT = 179;
   NU = 180;
   NZ = 181;
   OM = 182;
   PA = 183;
   PE = 184;
   PF = 185;
   PG = 186;
   PH = 187;
   PK = 188;
   PL = 189;
   PM = 190;
   PN = 191;
   PR = 192;
   PS = 193;
   PT = 194;
   PW = 195;
   PY = 196;
   QA = 197;
   RE = 198;
   RO = 199;
   RS = 200;
   RU = 201;
   RW = 202;
   SA = 203;
   SB = 204;
   SC = 205;
   SD = 206;
   SE = 207;
   SF = 208;
   SG = 209;
   SH = 210;
   SI = 211;
   SJ = 212;
   SK = 213;
   SL = 214;
   SM = 215;
   SN = 216;
   SO = 217;
   SR = 218;
   SS = 219;
   ST = 220;
   SU = 221;
   SV = 222;
   SX = 223;
   SY = 224;
   SZ = 225;
   TA = 226;
   TC = 227;
   TD = 228;
   TF = 229;
   TG = 230;
   TJ = 231;
   TK = 232;
   TL = 233;
   TM = 234;
   TN = 235;
   TO = 236;
   TP = 237;
   TR = 238;
   TT = 239;
   TV = 240;
   TW = 241;
   TZ = 242;
   UA = 243;
   UG = 244;
   UK = 245;
   UM = 246;
   US = 247;
   UY = 248;
   UZ = 249;
   VA = 250;
   VC = 251;
   VE = 252;
   VG = 253;
   VI = 254;
   VN = 255;
   VU = 256;
   WF = 257;
   WS = 258;
   XK = 259;
   YE = 260;
   YT = 261;
   YU = 262;
   ZA = 263;
   ZM = 264;
   ZR = 265;
   ZW = 266;
}
message Rufnummer {
   Rufnummernart Nummerntyp = 3;
   string rufnummer = 4;
}
enum Rufnummernart {
   RUF_ZENTRALE = 0;
   FAX_ZENTRALE = 1;
   SAMMELRUF = 2;
   SAMMELFAX = 3;
   ABTEILUNGRUF = 4;
   ABTEILUNGFAX = 5;
   RUF_DURCHWAHL = 6;
   FAX_DURCHWAHL = 7;
   MOBIL_NUMMER = 8;
}
enum Titel {
   DR = 0;
   PROF = 1;
   PROF_DR = 2;
}
message Zustaendigkeit {
   string Jobtitel = 3;
   string Abteilung = 4;
   string Themengebiet = 5;
}
